Bug 900111 - Fix CSSIntPoints and LayoutDeviceIntPoint usage in APZC Metro implementation. r=kats